bugs/tests/fuzz-05-18-13-21-59/r_822_r_175_issue3288_F10_P175_5_M0.stderr
likely_hits/r_822_r_175_issue3288_F10_P175_5_M0.p4(1): [--Werror=type-error] error: Cannot extract field a from {} which has type tuple<>
enum bit<8> E { a = { }.a };
                        ^
likely_hits/r_822_r_175_issue3288_F10_P175_5_M0.p4(1)
enum bit<8> E { a = { }.a };
                    ^^^
In file: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172
Compiler Bug: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172: Null srcType

